--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     <canvas id="gameArea" width="800" height="600"></canvas>
 
 
-    <script src="/src/script.js"></script>
+    <script src="src/script.js"></script>
 </body>
 </html>
